opened new chapter

--- a/main.tex
+++ b/main.tex
@@ -30,8 +30,14 @@
 \mainmatter
 
 \include{chapter_statistics}
+
+\part{Mathematical probability}
+
 \include{chapter_probability}
 \include{chapter_randomvars}
+
+\part{Statistics}
+
 \include{chapter_estimators}
 
 
@@ -192,663 +198,9 @@ points estimates as the true values!
 ``Standard error'' as SD of sampling distribution OR estimate of
 standard deviation.}
 
-\section{Summary statistics}\label{summary-statistics}
 
-The mean is also called the \emph{expectation value}, which gives a
-contemporary English speaker a strange idea of what it is. The
-expectation value is \emph{not} ``a value that you might expect''. That
-is the \emph{mode}. In certain cases, the mean and the mode are the
-same, but this is often not true. This is why it is so critical to look
-at the distribution of your data \emph{before} selecting summary
-statistics.
-
-\subsection{The (arithmetic) mean}\label{the-arithmetic-mean}
-
-Everyone knows the average: take your numbers, sum them, and divide by
-the number of numbers.
-
-Why is this a good idea? Early thinkers in statistics---who thought
-about it before it had a name---were curious about the same thing. The
-arithmetic mean was computationally simple (i.e., you could do it will
-quill and parchment, OK, pen and paper) and it seemed to ``work'', but
-why?
-
-It turns out that the arithmetic mean has some nice properties for, you
-guessed it, the normal distribution. In fact, we'll show that it is a
-certain kind of ``best way'' to guess the true, population mean from our
-sample mean. (It's the maximum likelihood estimator.)
-
-\subsection{The ``average''}
-
-In typical speech, we say something like, ``The average family has two
-children'', by which we mean that a typical family has two children.
-This is confusing because we also use the word ``average'' to refer to
-the arithmetic mean. These two things are similar only in special cases,
-including (you guessed it!) the normal distribution.
-
-The arithmetic mean of number of children in families is somewhere
-between 2 and 3 (let's say 2.5), but it's clear that no ``average
-family'' has 2.5 children. Similarly, it's confusing that the mean
-salary in the US is whatever, even thought that is above what whatever
-percent of people get paid.
-
-\subsection{Mode, median, and
-percentiles}\label{mode-median-and-percentiles}
-
-Typical can mean ``common'', so we might say, in a sense, that an
-``average'' family has two children. Of the number of children you can
-have (zero, one, two, etc.), two is the most common, so that's
-``average''. Technically, the most common value is the \emph{mode}. No
-one really talks about the mode except in stats textbooks.
-
-A more interesting number is the middle point. We might say that an
-average American makes whatever because half of people make more and
-half of people make less. This is the \emph{median} (from Latin
-\emph{medius}, meaning ``middle'').
-
-It even feels natural to combine the median and mode ideas (have our
-median cake and eat it a la mode?). We want a sense of what are
-``middling'' numbers, and we want a sense of what are ``common''
-numbers. So you might ask what range is covered by the most middle half
-of numbers.
-
-Children are often measured against a growth chart, which shows
-\emph{percentiles}: if you are in the 25th percentile, you are taller
-than 50\% of people. (The median is just another name for the 50th
-percentile.) The range between the 25th and 75th percentiles, which
-covers the middle half of people, is the \emph{interquartile range},
-because the 25th, 50th, and 75th percentiles are also called the
-\emph{quartiles}, because they divide the numbers into four quarters
-(bottom quarter, bottom-middle, top-middle, and top).
-
-\subsection{Mean, median, and mode are usually
-different}\label{mean-median-and-mode-are-usually-different}
-
-Roll a dice many times. What are the mean, median, and mode? Mean is
-easy: each number is equally likely to come up, so we just take the mean
-of 1, 2, 3, 4, 5, 6, which is 3.5. The median is a little tricky here:
-it's between 3 and 4, and when we hit this situation we normally define
-the median as the arithmetic mean of the two middle values. So the
-median is also 3.5 here, but only because of some convention. The mode
-is also confusing, since all numbers are equally likely, which means
-that they are all equally the mode.
-
-For the normal distribution, the mean, median, and mode are all the
-same. So it's only in this very potentially unusual case that our
-intuition is correct that that the ``average'' value, in the sense of
-something common (i.e., the mode), is the same as the ``average'' value,
-in the sense of something middling (i.e., the median), is the same as
-the arithmetic mean.
-
-Historical box for Quetelet: the idea of an ``average person'' is
-directly traceable to a particular proto-statistician, who is remarkable
-for having believed that almost \emph{everything} was normally
-distributed. At the time, they only had very rudimentary methods for
-determining if something was normally distributed (basically, eyeballing
-it), and there were very appealing aesthetic/philosophical reasons to
-believe that almost everything was normally distributed, so he believed
-that too.
-
-\section{$t$-test}
-
-\subsection{Equal variance}\label{equal-variance}
-
-The (old school) \emph{t}-test is two sample, assuming equal variances.
-We're interested in the difference in the means between the two
-populations.
-
-The null hypothesis is that we're drawing \(n_1 + n_2\) samples from a
-population that has this equal variance, and that the labels on the two
-``populations'' are just fictitious.
-
-Our estimator \(s_p^2\) for the pooled variance is just the average of
-the variances of the two ``populations'', weighted by \(n_i - 1\) (which
-is a better estimator than weighting by just \(n_i\)): \[
-s_p^2 = \frac{(n_1 - 1) s_1^2 + (n_2 - 1) s_2^2}{n_1 + n_2 - 2}.
-\]
-
-The thing we're observing is the difference between the mean of \(n_1\)
-samples from a (potentially ficitious) variable \(X_1\) and \(n_2\) from
-\(X_2\): \[
-\overline{X}_1 - \overline{X}_2 = \frac{1}{n_1} \sum_{i=1}^{n_1} X_{1i} - \frac{1}{n_2} \sum_{i=1}^{n_2} X_{2i}.
-\] It would be nice if our statistic was distributed like
-\(\mathcal{N}(0, 1)\), so we compute the variance of this observation:
-\[
-\begin{aligned}
-\mathrm{Var}\left[ \overline{X}_1 - \overline{X}_2 \right]
-  &= \frac{1}{n_1^2} \sum_i \mathrm{Var}[X_1] + \frac{1}{n_2^2} \sum_i \mathrm{Var}[X_2] \\
-  &= \frac{1}{n_1^2} n_1 s_p^2 + \frac{1}{n_2^2} n_2 s_p^2 \\
-  &= \left( \frac{1}{n_1} + \frac{1}{n_2} \right) s_p^2.
-\end{aligned}
-\]
-
-So the statistic for this test is just the observation over its
-variance: \[
-t = \frac{\overline{X}_1 - \overline{X}_2}{s_p \sqrt{\frac{1}{n_1} + \frac{1}{n_2}}}.
-\]
-
-The confusing thing is that \(\overline{X}_1\), \(\overline{X}_2\), and
-\(s_p\) are all random variables. We know how to take the sum (or
-difference) of two random variables (i.e., how to figure out the
-distribution of the numerator), but it's not immediately obvious how to
-find the distribution of the whole thing, which has a different random
-variable in its denominator.
-
-\subsubsection{Computational approach}\label{computational-approach}
-
-\begin{itemize}
-\tightlist
-\item
-  Compute the observed \(t\) statistic
-\item
-  Compute the observed sizes, means, and standard deviations for the two
-  sample populations
-\item
-  Many times, generate two sets of random variates. One set of variates
-  is drawn from a normal distribution with the first sample mean and
-  variance.
-\item
-  For each iteration, compute the simulated \(t\) statistic.
-\item
-  The empirical \(p\)-value is the fraction (not true! need \(r+1/n+1\))
-  of simulated statistics that are greater than the observed statistic.
-\end{itemize}
-
-\subsection{Unequal variance (Welch's)}\label{unequal-variance-welchs}
-
-This is the Behrens-Fisher problem. It stumped Fisher! He came up with a
-weird statistic with a weird distribution (Behrens-Fisher), but it
-didn't really stick, since he couldn't calculate confidence intervals
-(?).
-
-Instead, people went for the Welch-Satterthwaite equation, which
-approximates the interesting distribution using a more handy one by
-matching the first and second moments. (Maybe worth discussing those? Or
-just say mean and variance?)
-
-\section{anova}\label{anova}
-
-Say you have some (equally-sized) groups. Each group was drawn from a
-normal distribution (all with the same variance). Are the data
-consistent with the model in which all those groups have the same mean?
-
-The statistic is \(F \equiv \frac{\mathrm{MS}_B}{\mathrm{MS}_W}\), where
-\(MS_B\) is the mean of the squares of the residuals(?) between the
-group means and the grand mean (``between'') and \(MS_W\) is the mean of
-the squares of the residuals between the data points and the group means
-(``within'').
-
-Again, focus on what's the population we're sampling from. It's easy to
-think about a finite population, where you can just do all the possible
-combinations and compare their \(F\) statistics. Then move on to say
-that, if you believe that the particular variances and means you
-measured are the exact, true distribution that you're sampling from, ask
-what happens when you sample from that infinite population.
-
-\subsection{z-test example}\label{z-test-example}
-
-What's the nonparametric equivalent of this? It's just saying what the
-empirical cdf is! Then say, if you really truly believe your mean and
-standard deviation, then you can do that.
-
-In other words, you say you are absolutely sure what population you are
-drawing from. The same is actually true of the \emph{t}-test, except
-that the \emph{z}-test is asking about a single value, distributed like
-\(N(\mu, \sigma^2)\), while the \emph{t}-test is about the mean of the
-\(n\) points, which is distributed like \(N(\mu, \sigma^2/n)\).
-
-\section{Paired differences}\label{paired-differences}
-
-\subsection{Historical example and
-motivation}\label{historical-example-and-motivation}
-
-Darwin's thing with the pots, as described in Fisher's \emph{Design of
-Experiments}
-
-We'll make a tower of the kinds of assumptions made to test Darwin's
-hypothesis.
-
-\subsection{Sign test}\label{sign-test}
-
-Assume that it's meaningful if a hybrid plant is taller than a
-self-fertilized plant, but don't assign any meaning beyond that. Then
-the data are effectively dichotomized: you get some number of cases in
-which one is taller and some number of cases in which the other is
-taller.
-
-Better to say that we're sampling from any distribution that has zero
-median. You could even say you're sampling from \emph{all}
-distributions. That's confusing, mathematically, because there are
-infinitely many distributions, and it's not obvious how you should
-sample from that functional space, but it works out, because all those
-distributions will have the same distribution of pluses and minuses.
-
-This is now just a binomial test.
-
-\subsection{Rank test (Mann-Whitney $U$)}
-
-Assume that the \emph{ranks} of the differences are meaningful.
-
-Now you're sampling from any distribution that is symmetric about zero.
-That means it has zero median also.
-
-\subsection{Fisher's weird sum test}\label{fishers-weird-sum-test}
-
-Not sure if there's any name for this. Assume that the actual values of
-the differences are meaningful.
-
-\subsection{Welch's $t$-test}
-
-Assume that the two populations are normally distributed and, and
-therefore that that the variances of the populations are meaningful.
-Then you can infer where this set of differences would stand in an
-infinite set of such differences.
-
-For early statisticians, this was really appealing, mostly from a
-computational point of view: you could actually compute the mean and
-standard deviation with pen and paper in a reasonable amount of time,
-but you definitely couldn't do all \(2^n\) different ways of taking
-sums. Fisher does it for one example in his book, and I'm sure it was
-pretty crazy. He makes it clear that he went to great lengths to do it,
-and his conclusion is that the results are basically the same, so you
-should probably be doing the easier thing and not worry about it.
-Nowadays it's gotten pretty easy to do the other thing!, so it's
-
-\section{Wilcox test and Mann-Whitney
-test}\label{wilcox-test-and-mann-whitney-test}
-
-\textbf{Walsh averages and confidence intervals}, from
-\href{http://www.stat.umn.edu/geyer/old03/5102/notes/rank.pdf}{here}
-
-There a few different names for these things:
-
-\begin{itemize}
-\tightlist
-\item
-  One-sample test: is this distribution symmetric about zero (or
-  whatever)?
-\item
-  Two-sample unpaired (independent; Mann-Whitney): does one of these
-  distributions ``stochastically dominate'' the other (i.e., is it that
-  a random value drawn from population \(A\) is more than 50\% probable
-  to be greater than a random value from \(B\))?
-\item
-  Two-sample paired (dependent): are the differences between paired data
-  points symmetric about zero?
-\end{itemize}
-
-\subsection{Wilcoxon}\label{wilcoxon}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  For each pair \(i\), compute the magnitude and sign \(s_i\) of the
-  difference. Exclude tied pairs.
-\item
-  Order the pairs by the magnitude of their difference: \(i=1\) is the
-  pair with the smallest magnitude. Now \(i\) is the rank.
-\item
-  Compute the \(W = \sum_i i s_i\).
-\end{enumerate}
-
-Thus, the bigger differences get more weight.
-
-(There might be a way to do a visualization of this: as you walk along
-the data points, you get a good bump for every rank that is in the
-``high'' data set, and you get a bad hit for every rank that is not.
-Then it settles out pretty quickly, and you want to know the meaning of
-the final intercept.)
-
-For small \(W\), the distribution has to be computed for each integer
-\(W\). For larger values (\(\geq 50\)), a normal approximation works.
-
-Compare the sign test, which does not use ranks, and which assumes the
-median is zero, but not that the distributions are symmetric. That's
-just a binomial test of the number of pluses or minuses you get. It's
-like setting the weights, which in \(W\) are the ranks, all equal.
-
-\subsection{Mann-Whitney}\label{mann-whitney}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  Assign ranks to every observation.
-\item
-  Compute \(R_1\), the sum ranks that belong to points for sample 1.
-  Note that \(R_1 + R_2 = \sum_{i=1}^N = N(N+1)/2\).
-\item
-  Compute \(U_1 = R_1 - n_1(n_1+1)/2\) and \(U_2\). Use the smaller of
-  \(U_1\) or \(U_2\) when looking at a table.
-\end{enumerate}
-
-At minimum \(U_1 = 0\), which means that sample 1 had ranks
-\(1,2,\ldots,n_1\). Note that \(U_1 + U_2 = n_1 n_2\).
-
-For large \(U\), there is a normal distribution approximation.
-
-\subsubsection{Generation}\label{generation}
-
-Say you have \(N\) total points and \(n_1\) in sample 1. Find all the
-ways to draw \(n_1\) numbers from the sequence \(1, 2, \ldots N\).
-Compute \(U\) for each of those. Voila.
-
-Note that, if you fix \(n_1\), then you don't have to subtract the
-\(n_1(n_1+1)/2\) to get the right \(p\)-value.
-
-\section{Statistical power: Cochrane-Armitage
-test}\label{statistical-power-cochrane-armitage-test}
-
-We never want to run just any test: we want to use the test that is most
-capable of distinguishing between the scenarios we're interested in.
-Usually this is a matter of choosing the test that has the right
-assumptions: the one-sample \emph{t}-test is more powerful than the
-Wilcoxon test if the data come from a truly normally-distributed
-population.
-
-In other cases, you might have more flexibility. There's a somewhat
-obscure test that is, I think, a great illustration of this.
-
-Imagine that you have some data with a dichotomous outcome for some
-categorical predictor value. One classic example is drug dosing: you
-think that, as the dosage of the drug goes up, you have more good
-outcomes than bad outcomes. Did a greater proportion of people on board
-the Titanic survive as you go up from crew to Third Class to Second to
-First? Did the proportion of some kind of event increase over years?
-Technically, this means you have a \(2 \times k\) table of counts, with
-two outcomes and \(k\) predictor categories.
-
-\begin{longtable}[]{@{}llll@{}}
-\toprule
-Outcome & Dose 1 & Dose 2 & Dose 3\tabularnewline
-\midrule
-\endhead
-Good & 1 & 5 & 9\tabularnewline
-Bad & 9 & 4 & 1\tabularnewline
-\bottomrule
-\end{longtable}
-
-You could use a \(\chi^2\) test with equal expected frequencies across
-the columns. In other words, there might be more ``good'' than ``bad''
-outcomes, but you don't expect that proportion to differ meaningfully
-across categories. You would pool the data across categories, use the
-observed proportion of good outcomes as you best guess of the true
-proportion \(f\), and compare the actual data with you expectation that
-a fraction \(f\) of the counts in each column are ``good''.
-
-In our examples, we think the data have some \emph{particular} kind of
-pattern. The \(\chi^2\) test doesn't look for any particular pattern; it
-just looks for any deviation from the null. The test statistic for the
-\(\chi^2\) distribution is based around the sum of the square deviations
-from the expected values, usually written \(\sum_i (O_i - E_i)^2\), with
-some stuff in the denominator to make the distribution of the statistic
-easier to work with. If the sum of the squared deviations is too large,
-then we have evidence that the observed values are not ``sticking to''
-the expected frequencies.
-
-The trick I'm going to show you is to keep the same null
-hypothesis---that outcome doesn't depend on dose---but adjust the test
-so that it's more sensitive to particular kinds of dependencies.
-
-This is a fair approach because we're still just trying to say, ``OK,
-say you (the nameless antagonist) were right, and there really was no
-pattern in the data. Then I'm free to make up any test statistic, so
-long as, if you're right, we can show that the observed data were likely
-to have arisen by chance.''
-
-To start constructing the test, think about each flip as a weighted
-binomial trial. We'll use these weights to adjust the test statistic to
-be more sensitive to what we suspect the true pattern in the data is,
-but we'll need to derive the distribution of the test statistic so that
-we can satisfy the nameless antagonist.
-
-Say each flip \(y_i\), which is in some category \(x_i\), gets some
-associated weight \(w_i\). A really simple statistic would be
-\(\sum_i w_i y_i\), the sum of the weights of the ``successful'' trials.
-It would be nice to have this be zero-centered: \[
-\sum_i \left\{ w_i y_i - \mathbb{E}\left[ w_i y_i \right] \right\} = \sum_i w_i (y_i - \overline{p}),
-\] where \(\overline{p} = (1/N)\sum_i y_i\).
-
-It would also be nice for this to have variance 1, so we can divide by
-the square root of \[
-\mathrm{Var}\left[ \sum_i w_i (y_i - \overline{p}) \right] = \overline{p} (1-\overline{p}) \sum_i w_i^2
-\] to produce the statistic \[
-T = \frac{\sum_i w_i (y_i - \overline{p})}{\sqrt{\overline{p} (1-\overline{p}) \sum_i w_i^2}}.
-\]
-
-You could also conceive of this being a table with two rows and some
-number of columns. We bin the trials by their weights: all trials with
-the same weight are in the same column. Successes go in the top row;
-failures in the bottom. Now write \(t_c\) as the weight of the trials in
-the \(c\)-th column, \(n_{1c}\) is the number of successful trials with
-weight \(t_c\) (i.e., in column \(c\)), and \(n_{2c}\) is the number of
-failures. Then some math shows that you can rewrite \(T\) as \[
-T = \frac{\sum_c w_c (n_{1c} n_{2\bullet} - n_{2c} n_{1\bullet})}{\sqrt{(n_{1\bullet} n_{2\bullet} / n_{\bullet\bullet}^2) \sum_c n_{\bullet c} w_c^2}}
-\] where \(n_{r\bullet}\) are the row margins, \(n_{\bullet c}\) are the
-column margins, and \(n_{\bullet\bullet}\) is the total number of
-trials.
-
-\emph{N.B.}: The wiki page gives a different answer, but I don't trust
-it, since the variance formula doesn't assume independence of the
-\(y_i\). A fact sheet about the PASS software that shows the formula in
-terms of the \(y_i\) seems to make a mistake by using \(i\) as an index
-both for individual trials and for the weight categories.
-
-The confusing thing here is how to pick the weights. This test is mostly
-used to look for linear trends: imagine that each \(y_i\) is associated
-with some \(x_i\), so that the weights would be \(x_i\) or
-\(x_i - \overline{x}\). Why you pick these exact weights has to do with
-the \emph{sensitivity} of the test. There could, of course, be a
-nonlinear trend, like a U-shape, that would lead to a zero expectation
-for this statistic. The \(\chi^2\) test can find that, but
-Cochrane-Armitage with these weights cannot.
-
-To see why you use those weights for a linear test, imagine that
-\(p_i \propto x_i\), and zero-center the \(x_i\) such that
-\(p_i = m x_i + \overline{p}\).
-
-Then the question is what \(w_i\) maximize \(\mathbb{E}[T]\)? You can
-quickly see that this is equivalent to maximizing
-\(\sum_i w_i x_i / \sqrt{\sum_i w_i^2}\), and taking a derivative with
-respect to \(w_j\) shows that, at the extremum,
-\(x_j \sum_i w_i^2 = w_j \sum_i w_i x_i\), which \(w_i = x_i\) for all
-\(i\) satisfies. So those weights are the best way to get a large
-statistic if you think that there actually is a linear test.
 
 \section{Estimators}\label{estimators}
-
-\subsection{Motivating example: uniform
-distribution}\label{motivating-example-uniform-distribution}
-
-Consider a uniform distribution from zero up to some number \(B\).
-What's the maximum of this distribution? Well, if you know it, it's
-easy: it's just \(B\). It's also easy if you can sample a zillion times
-from the distribution: you are very likely at some point to get a value
-very close to \(B\), so you can just use that as your estimate.
-
-But what if you only drew one point? Then clearly the maximum of the
-drawn values, just that point, is a pretty bad estimate for the upper
-limit. If you draw 3 points, then the maximum is a little better, but
-you can feel pretty sure that estimating the \emph{population} maximum
-using your \emph{sample} maximum is biased: you're always going to
-underestimate the population maximum.
-
-When we use our data to make a guess about a population parameter,
-that's an \emph{estimator}. (Good name.) We say that an estimator that
-we expect to not be ``systematically''\footnote{Why the scare quotes?
-  Like in all frequentist statistics, we're stuck with assuming that we
-  know the truth, finding the best answer knowing the full truth, and
-  then pretending we didn't know the truth in the first place. So
-  ``systematically'' is going to mean: assume you know the true value,
-  evaluate the behavior of the estimator knowing the truth, and then
-  forget you know the truth.} above or below the true value is
-\emph{unbiased}. Estimators are typically written with a hat (because
-you use a cone hat to communicate with the mothership?), so \(\hat{B}\)
-is an estimator for \(B\). Of course, there isn't just one estimator for
-a value. I know plenty of people who are perfectly happy to guess that 3
-is the right answer in statistics, so for them we might write
-\(\hat{B} = 3\). This is clearly a bad estimator, but what does ``bad''
-mean?
-
-To answer that, let's consider some of the properties of different
-estimators. To keep the different estimators straight, let's put
-subscripts on them. I'll call the clearly bad estimator
-\(\hat{B}_\mathrm{bad} = 3\) and I'll call our naive estimator \[
-\hat{B}_1 = \max_i X_i,
-\] where I called it ``1'' because it was our first guess. I also called
-the variables we're drawing from the uniform distribution as \(X_i\).
-
-\subsubsection{Consistent estimators}\label{consistent-estimators}
-
-One reason that \(\hat{B}_\mathrm{bad}\) seems bad is that it doesn't
-change. It won't ever get more ``right'', no matter how much data we
-collect. On the other hand, \(\hat{B}_1\) will get better. In fact, the
-more data we take, the closer we expect \(\hat{B}_1\) to get to the true
-maximum.
-
-Estimators whose expected value approach the true value as the number of
-points approaches infinity is called \emph{consistent}. Call \(M\) the
-true value and \(n\) the number of points we drew. Then \(\hat{B}_1\) is
-consistent because \[
-\lim_{n \to \infty} \hat{B}_1 = M.
-\] In other words, if you specify an error threshold (e.g., you want an
-estimate within 10\% of the true value), then I can tell you what \(n\)
-you need to pick in order to get an estimate within that threshold (with
-some finite probability). In contrast, with \(\hat{B}_\mathrm{bad}\),
-there's no \(n\) you can pick that will get you arbitrarily close to the
-true value.
-
-\subsubsection{Unbiased estimators}\label{unbiased-estimators}
-
-Clearly, though, \(\hat{B}_1\) is not perfect. No matter how many \(n\)
-we draw, \(\hat{B}_1\) will always be less than \(M\). We therefore say
-that \(\hat{B}_1\) is \emph{biased}. Mathematically, we might write
-\(\mathbb{E}[\hat{B}_1] < B\). Because it feels natural to expect that
-the expected value of your estimator will be the true value, an
-estimator \(\hat{B}\) for which \(\mathbb{E}[\hat{B}] = B\) is called
-\emph{unbiased}.\footnote{Another standard for ``good'' estimators is
-  the \emph{best linear unbiased} estimator (BLUE). ``Linear'' means
-  that the estimator is a linear function of the data. (You could maybe
-  imagine that there is some wacky, convoluted function that's a better
-  estimator, but we stick with linear.) The final qualifier, ``best'',
-  means that the variance of the estimator is the minimum of all other
-  linear unbiased estimators. Here ``variance of the estimator'' is
-  computed in the same sense that the expected value of the estimator is
-  computed for determining bias. In other words, ``best unbiased'' means
-  its centered on the true value with the smallest variance possible.}
-
-Let's try to salvage our naive estimator \(\hat{B}_1\) and make an
-unbiased estimator \(\hat{B}_\mathrm{ub}\) instead.
-
-Where to start? It's likely that there are many unbiased operators, so
-we need to pick the form of the operator we want to look for. It seems
-likely that all our observed \(X_i\) only have two interesting things
-about them: their maximum, and how many of them there are. For example,
-if my first draw was \(1.0\), then I don't learn that much if I draw
-\(0.1\) the next five times, because I know that \(M > 1.0\), and,
-because it's a uniform distribution, I was just as likely to draw
-\(0.1\) as \(1.0\). If I draw many values below \(1.0\), I only learn
-that the maximum is probably not far above \(1.0\), which is already
-encoded in the number of points \(n\).
-
-So I want \(\hat{B}_\mathrm{ub}\) to be some function of \(n\), which is
-fixed, and \(M\), which is a random variable{[}\^{}wtf{]}, such that
-\(\mathbb{E}[\hat{B}_\mathrm{ub}] = M\). That will require knowing the
-distribution of \(M\).
-
-\textbf{swo} I mixed a lot of this up. I called \(B\) the true value,
-which got confusing. I should just use \(M\) and \(\hat{M}\).
-
-The cumulative distribution function, the probability that the observed
-maximum is less than some \(m\), is just the probability that there is
-no point that is above \(m\): \[
-F_M(m) = \mathbb{P}[M \leq m] = \mathbb{P}[X_i \leq m \text{ for all } i] = \left( \frac{m}{B} \right)^n.
-\] Then we compute the probability density function: \[
-f_M(m) = \frac{d}{dm} F_M(m) = \frac{n}{B} \left( \frac{m}{B} \right)^{n-1},
-\] from which we compute the expected value of \(M\): \[
-\mathbb{E}[M] = \int_0^B m \, f_M(m) \, \mathrm{d}m = \frac{n}{n+1} B.
-\]
-
-Interesting, the expected value of \(M\) is just a multiple of \(B\).
-Consider that if \(n=1\), you just draw one point, the expected value of
-the maximum, which is just that value you drew, is \(\tfrac{1}{2} B\).
-Makes sense: you're likely to get something right in the middle.
-
-If you draw 2 points, the expected maximum if \(\tfrac{2}{3}B\),
-somewhat closer to \(B\). It's easy to see that as \(n\) increases,
-\(\mathbb{E}[B]\) approaches \(B\), just as we reasoned about before
-doing any math.
-
-Now, by linearity of expectation, I know that
-\(\mathbb{E}\left[\tfrac{n+1}{n} M \right] = B\), so lo! I have found an
-unbiased estimator: \[
-\hat{B}_\mathrm{ub} = \frac{n+1}{n} M.
-\]
-
-\subsubsection{Maximum likelihood
-estimator}\label{maximum-likelihood-estimator}
-
-It's nice that we found an unbiased estimator, which we think is
-``good'' in the sense that we're not systematically off in one direction
-or the other. In one way this is comforting, but it isn't foolproof.
-Imagine you're working with a bimodal distribution: it tends to give
-small numbers or big numbers. Then an unbiased estimator splits the
-difference, potentially estimating values that aren't even possible!
-
-For this reason, it's useful to think about \emph{maximum likelihood}
-estimators (or MLEs, if you're into that sort of acronym). ``Maximum
-likelihood'' means that, given the \emph{observed} value, you find the
-\emph{true} value that, if it were true, would be most likely, out of
-all the other true values, to give rise to your data.\footnote{Did that
-  sound crazy? If so, get excited about the Bayesian section of this
-  book. In there we'll show that there's a mathematically precise way to
-  show that this kind of thinking---saying that the most likely state of
-  nature given our data is the state of nature that, of all states of
-  nature, was most likely to produce the data we observed---is coherent
-  only under some pretty strong assumptions about the universe.}
-
-In other words, given the observed \(M\), what \(B\) would have given
-rise to that \(M\) with the greatest probability? Mathematically we
-write \[
-\hat{B}_\mathrm{ML} = \max_B \mathbb{P}[M | B],
-\] where ``MLE'' stands for ``maximum likelihood''.\footnote{The
-  promised Bayesian result is that the \(B\) that maximizes
-  \(\mathbb{P}[M | B]\), the probability of the data given the state of
-  nature, is also the \(B\) for which \(\mathbb{P}[B | M]\), the
-  ``probability of the state of nature'' given the data, is maximum,
-  although that's only true under a specific, and pretty
-  hard-to-believe, criterion. I put more scare quotes here because, as
-  mentioned before, if probability is a frequency, it doesn't make sense
-  to talk about the probability of a state of nature.} This should be a
-piece of cake, since we already found the probability density function
-for \(M\), which is a function of \(B\). It's easy to see, just by
-inspection, that the value between zero and \(B\) for which \(m\)
-maximum \(f_M(m)\) is just \(B\). In other words,
-\(\hat{B}_\mathrm{ML} = M\).
-
-You may have noticed that this is the same estimator that I previous
-denigrated as ``naive'' and ``biased''. To be clear, this is the maximum
-likelihood estimator: you know that \(\hat{B}_\mathrm{ML}\) can't be any
-less than \(M\), since the upper bound must be at least as high as the
-biggest data point we observed, and some careful thought shows that
-\(\hat{B}_\mathrm{ML}\) can't be any greater than \(M\), since
-hypothetically increasing \(B\) above \(M\) just decreases the
-probability that you would have observed \(M\) as the maximum
-value.\footnote{Imagine hypothetically increasing \(B\) to a zillion
-  times \(M\). Clearly, observing that small of an \(M\) is given that
-  large of a \(B\) is unlikely, and there's no ``cut point'' so that an
-  infinitesimal increase is reasonable but a zillion-fold increase is
-  not.}
-
-So this example tells an interesting lesson: it's not the case that an
-estimator that is ``good'' in one sense (e.g., unbiased) will be
-``good'' in another sense (e.g., maximum likelihood). We'll show that
-there's a special case in which that's true. (Can you guess what it is?
-No really, try. Or, don't try, and just say the first probability
-distribution that comes to mind.)
-
-\textbf{German tank problem} as an exercise.
 
 \subsection{The tyranny of the normal, part
 XLIV}\label{the-tyranny-of-the-normal-part-xliv}
@@ -927,43 +279,6 @@ for the population mean: \[
 
 \textbf{Is this really all that special, then?}
 
-\subsection{Variance}\label{variance}
-
-One estimator is used so often that it's often not even explained as an
-estimator, or even called an estimator, which is very confusing. Imagine
-if someone said that the definition of a maximum of a set of points was
-\(\tfrac{n+1}{n}\) times the biggest value. Crazy, right? If you agree,
-then you're well prepared.
-
-The definition of sample variance is the average square deviation from
-the mean: \[
-s^2 \equiv \frac{1}{n} \sum_i (x_i - \overline{x})^2,
-\] where \(\overline{x}\) is just the normal arithmetic mean. Because
-we're used to estimators, it's a nice question to ask, is this a
-``good'' estimator of the true variance \(\sigma^2\)?
-
-\textbf{Some math} will show that
-\(\mathbb{E}[s^2] = \tfrac{n-1}{n} \sigma^2\), that is, that the sample
-variance is a biased (underestimating) estimator for the true variance.
-Happily, it requires merely multiplying by \(\tfrac{n}{n-1}\) (called
-``Bessel's correction''), so that the unbiased estimator is: \[
-\hat{\sigma^2} = \frac{1}{n-1} \sum_i (x_i - \overline{x})^2.
-\]
-
-This estimator is so commonly used that it is often simply referred to
-as ``sample variance'', leaving students to wonder why the variance is
-one thing for ``true distributions'' and another thing for samples. To
-be clear, the sum of square deviations divided by \(n-1\) is an unbiased
-\emph{estimator} for the population variance.
-
-Unfortunately, the words ``sample variance'' are used to refer to the
-actual sample variance (sum of square deviations divided by \(n\)) as
-well as to this estimator. There's often no way to tell. I'm sorry. You
-should probably guess that people mean the \(n-1\) denominator
-\emph{estimator}, and you should probably guess that most people won't
-know the difference.\footnote{Comfortingly, as \(n\) grows, the
-  difference between the sample variance and the ``sample variance''
-  becomes negligible.}
 
 \subsection{Estimators about
 estimators}\label{estimators-about-estimators}
